# msad

./: CMakeLists.txt  CODEOWNERS  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  Third_Party_Open_Source_Software_Notice  XDIVY_REMOVAL_CHECKLIST.md  build.bat  build.sh
mindspore/ccsrc/: CMakeLists.txt
mindspore/ccsrc/backend/backend_manager/: backend_jit_config.h  backend_manager.cc
mindspore/ccsrc/backend/common/: CMakeLists.txt  device_address_utils.cc  device_address_utils.h  ms_device_shape_transfer.cc
mindspore/ccsrc/backend/ge_backend/: CMakeLists.txt  ge_backend.cc  ge_backend.h
mindspore/ccsrc/backend/ms_backend/: CMakeLists.txt  graph_partition.cc  ms_backend.cc  ms_backend.h  ms_backend_base.cc  ms_backend_base.h  ms_backend_cb_register.cc  segment_runner.cc
mindspore/ccsrc/cluster/: CMakeLists.txt  init.cc
mindspore/ccsrc/cluster/topology/: actor_route_table_proxy.cc  actor_route_table_service.cc  cluster_context.cc  compute_graph_node.cc  dummy_cluster_context.cc  meta_server_node.cc  tcp_node.cc  tcp_store.cc  utils.cc
mindspore/ccsrc/cmake/: ascend_compile_config.cmake  cpu_compile_config.cmake  gpu_compile_config.cmake  proto_compile_config.cmake
mindspore/ccsrc/frontend/: CMakeLists.txt
mindspore/ccsrc/frontend/expander/: utils.cc  utils.h
mindspore/ccsrc/frontend/operator/: custom_op_infer.cc  ops_extends.cc  ops_front_infer_function.cc  primitive_py.cc  primitive_py.h  py_execute_py.h  python_infer_value_utils.cc
mindspore/ccsrc/frontend/optimizer/: auto_monad_eliminate.cc  cse_pass.cc  cse_pass.h  environ_conversion.cc  fallback_rewriter.cc  graph_transform.cc  graph_transform.h  irpass.cc  irpass.h  opt.cc  opt.h  optimizer.cc  py_interpret_to_execute.cc  recompute.cc  utils.cc
mindspore/ccsrc/frontend/parallel/: came_parallel_handler.cc  costmodel_context.h  device_manager.cc  device_manager.h  device_matrix.h  group_manager.cc  parallel_node_check.cc  parallel_postprocessor.cc  parallel_preprocessor.cc  parallel_processer.cc  parallel_whole_graph_processor.cc  parameter_manager.cc  step_assigned_parallel.cc  step_auto_parallel.cc  step_parallel.cc  step_parallel_utils.cc  strategy_loader.cc  strategy_utils.cc
mindspore/ccsrc/include/backend/: anf_runtime_algorithm.h
mindspore/ccsrc/include/cluster/: init.h
mindspore/ccsrc/include/utils/: anfalgo.h  common.h  compile_cache_context.h  config_manager.h  convert_utils.h  convert_utils_py.h  cse.h  fallback.h  primfunc_utils.h  pyobj_manager.h  python_fallback_running.h  stream_util.h  tensor_py.h  utils.h
mindspore/ccsrc/minddata/cmake/: dataset.cmake
mindspore/ccsrc/minddata/dataset/: CMakeLists.txt
mindspore/ccsrc/minddata/mindrecord/: CMakeLists.txt
mindspore/ccsrc/plugin/ascend/: CMakeLists.txt  ascend_device_address_maker.cc  ascend_device_context.cc  ascend_device_context.h
mindspore/ccsrc/plugin/cpu/: CMakeLists.txt  cpu_device_context.cc  cpu_device_context.h
mindspore/ccsrc/plugin/gpu/: CMakeLists.txt  gpu_device_address_maker.cc  gpu_device_context.cc  gpu_register_callback.cc
mindspore/ccsrc/pybind_api/: frombuffer.cc  init.cc
mindspore/ccsrc/pybind_api/graph/: custom_backend_py.cc  custom_pass_py.cc  pipeline_py.cc
mindspore/ccsrc/pybind_api/initializer/: init_random.cc
mindspore/ccsrc/pybind_api/ir/: anf_py.cc  cell_py.cc  dtype_py.cc  func_graph_py.cc  jit_init_py.cc  map_tensor_py.cc  param_info_py.cc  primitive_py_reg.cc  reducer_py.cc  signature_py.cc  value_py.cc
mindspore/ccsrc/pybind_api/resource/: manager.cc  manager.h
mindspore/ccsrc/pybind_api/runtime/: device_manager_py.cc  event_py.cc  memory_py.cc  memory_py.h  runtime_conf_py.cc  stream_py.cc  utils_py.cc  utils_py.h
mindspore/ccsrc/pybind_api/tools/: clean_tdt_channel_py.cc  data_dump_py.cc  param_util_py.cc  profiler_py.cc  silent_detect_py.cc  stress_detect_py.cc  tft_adapter_py.cc
mindspore/ccsrc/pybind_api/utils/: fork_utils_py.cc  log_adapter_py.cc  ms_context_py.cc  op_enum_py.cc  random_seeded_generator.cc  reuse_data_ptr_py.cc  security_py.cc
mindspore/ccsrc/pynative/: CMakeLists.txt
mindspore/ccsrc/pynative/backward/: backward_api_reg.cc  backward_node_py_reg.cc  function.cc  function.h  grad.cc  grad.h  grad_utils.cc  grad_utils.h  saved_tensor.cc  saved_tensor.h  top_cell.cc  top_cell.h
mindspore/ccsrc/pynative/parallel/: reducer.cc  reducer.h
mindspore/ccsrc/pynative/utils/: base.h  predict_out_type_map.cc  pynative_execute.cc  pynative_execute.h  pynative_utils.cc  pynative_utils.h
mindspore/ccsrc/runtime/core/: CMakeLists.txt
mindspore/ccsrc/runtime/hardware_abstract/: CMakeLists.txt
mindspore/ccsrc/runtime/pipeline/: CMakeLists.txt  async_rqueue.cc  pipeline.cc
mindspore/ccsrc/runtime/utils/: CMakeLists.txt
mindspore/ccsrc/tools/: CMakeLists.txt  callback.cc  debug_func.cc
mindspore/ccsrc/tools/data_dump/: cpu_e2e_dump.cc  data_dump.cc  debug_services.cc  dump_control.cc  dump_json_parser.cc  dump_utils.cc  e2e_dump.cc  npy_header.cc  tensor_stat_dump.cc  tensor_statistic.cc  utils.cc
mindspore/ccsrc/tools/error_handler/: error_config.cc  error_config.h  error_handler.cc  error_handler.h  exit_handler.cc
mindspore/ccsrc/tools/execute_order_tracker/: execute_order_tracker.cc  kernel_cache.cc
mindspore/ccsrc/tools/profiler/: CMakeLists.txt  data_saver.cc  profiler.cc  profiling.cc  profiling.h  profiling_data_dumper.cc  profiling_framework_data.cc  profiling_python.cc  report_data.cc
mindspore/ccsrc/utils/: CMakeLists.txt  amp.cc  anfalgo.cc  callback.cc  comm_manager.cc  common.cc  compile_cache_context.cc  config_manager.cc  convert_utils.cc  convert_utils_py.cc  cse.cc  custom_aot_extra_dual_abi.h  env_config_parser.cc  env_vars.cc  fallback.cc  hook.cc  json_operation_utils.cc  np_dtypes.cc  offload_context.cc  parallel_context.cc  primfunc_utils.cc  pyobj_manager.cc  python_adapter.cc  python_fallback_running.cc  python_utils.cc  recompute_helper.cc  scoped_long_running.cc  signal_util.cc  stub_tensor.cc  tensor_future.cc  tensor_py.cc  tensor_py_wrapper.cc  tensor_utils.cc  thread_pool.cc  utils.cc
(+8523 files in other folders)
